Changing JWT test resource path and include Swagger doc
